[project]
name = "comfyui-audio-pitch"
description = "Controls the pitch of the audio"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Takenoko3333/ComfyUI-Audio-Pitch"

[tool.comfy]
PublisherId = "Takenoko3333"
DisplayName = "ComfyUI-Audio-Pitch"
Icon = ""
